<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_10sdp"
    android:overScrollMode="always"
    tools:context=".LoginRegister.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/titleRegister"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/act_signup_title"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="@color/black" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userImgSign"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:src="@drawable/user"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_100sdp"
        android:background="@drawable/img_user_register"
        android:padding="@dimen/_3sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_weight="1"
        android:textColorHint="#A6A6A6"
        app:boxStrokeColor="#5ADDF6"
        app:hintTextColor="#5ADDF6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImgSign"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_signup_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:drawablePadding="@dimen/_7sdp"
            android:ems="10"
            android:drawableLeft="@drawable/ic_person"
            android:hint="@string/act_signup_name"
            android:inputType="text"
            android:padding="@dimen/_8sdp"
            android:textColorHighlight="#0888ED"
            android:textSize="@dimen/_12ssp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_weight="1"
        android:textColorHint="#A6A6A6"
        app:boxStrokeColor="#5ADDF6"
        app:hintTextColor="#5ADDF6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_signup_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="@dimen/_7sdp"
            android:hint="@string/act_invoiceAn_phone"
            android:inputType="number"
            android:drawableLeft="@drawable/ic_call"
            android:padding="@dimen/_8sdp"
            android:textColorHighlight="#0888ED"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColorHint="#A6A6A6"
        app:boxStrokeColor="#5ADDF6"
        app:hintTextColor="#5ADDF6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_signup_Subscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_7sdp"
            android:hint="@string/act_signup_subscription"
            android:inputType="number"
            android:drawableLeft="@drawable/ic_subscription"
            android:textColorHighlight="#0888ED"
            android:textColorHint="#A6A6A6"
            android:padding="@dimen/_8sdp"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/pbSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_back"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="@dimen/_245sdp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_7sdp"
        app:cardElevation="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@+id/text_signup_alreadyHaveAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup_sign"
            android:layout_width="@dimen/_245sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_log_in"
            android:text="@string/act_signup_signUp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_signup_alreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_signup_already"
        android:layout_marginBottom="@dimen/_20sdp"
        android:textColor="#3C3C3C"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>